@@ -7,58 +7,64 @@ import com.etiya.rentacar.business.dtos.responses.transmission.CreatedTransmissi
 import com.etiya.rentacar.business.dtos.responses.transmission.GetTranmissionListResponse;
 import com.etiya.rentacar.business.dtos.responses.transmission.GetTranmissionResponse;
 import com.etiya.rentacar.business.dtos.responses.transmission.UpdatedTransmissionResponse;
+import com.etiya.rentacar.core.utilities.mapping.ModelMapperService;
 import com.etiya.rentacar.dataAccess.abstracts.TransmissionRepository;
+import com.etiya.rentacar.entities.Brand;
 import com.etiya.rentacar.entities.Transmission;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
+
 @AllArgsConstructor
 @Service
 public class TransmissionManager implements TransmissionService {
     private TransmissionRepository transmissionRepository;
+    private ModelMapperService modelMapperService;
+
     @Override
     public CreatedTransmissionResponse add(CreateTranmissionRequest createTransmissionRequest) {
-        Transmission transmission = new Transmission();
-        transmission.setName(createTransmissionRequest.getName());
-        transmissionRepository.save(transmission);
-        return new CreatedTransmissionResponse(transmission.getId(),transmission.getName(),transmission.getCreatedDate());
+        Transmission transmission = modelMapperService.forRequest().map(createTransmissionRequest, Transmission.class);
+        transmission.setCreatedDate(LocalDateTime.now());
+        Transmission saveTransmission = transmissionRepository.save(transmission);
+        return modelMapperService.forResponse().map(saveTransmission, CreatedTransmissionResponse.class);
 
     }
 
     @Override
     public UpdatedTransmissionResponse update(UpdateTransmissionRequest updateTransmissionRequest) {
-        Transmission transmission = transmissionRepository.findById(updateTransmissionRequest.getId()).orElseThrow(() -> new IllegalArgumentException("Transmission not found"));
-        transmission.setName(updateTransmissionRequest.getName());
-        transmissionRepository.save(transmission);
-        return new UpdatedTransmissionResponse(transmission.getId(),transmission.getName(),transmission.getUpdatedDate());
+        Transmission updatedTransmission = modelMapperService.forRequest().map(updateTransmissionRequest, Transmission.class);
+        updatedTransmission.setUpdatedDate(LocalDateTime.now());
+        Transmission savedTransmission = transmissionRepository.save(updatedTransmission);
+        return modelMapperService.forResponse().map(savedTransmission, UpdatedTransmissionResponse.class);
 
     }
 
     @Override
     public List<GetTranmissionListResponse> getAll() {
         List<Transmission> transmissions = transmissionRepository.findAll();
-        List<GetTranmissionListResponse>  response = transmissions.stream().map(transmission -> new GetTranmissionListResponse(transmission.getId(),transmission.getName(),transmission.getCreatedDate())).toList();
+        return transmissions.stream().filter(transmission -> transmission.getDeletedDate() == null).map(transmission ->
+                modelMapperService.forResponse().map(transmission, GetTranmissionListResponse.class)).collect(Collectors.toList());
 
-        return response;
     }
 
     @Override
     public GetTranmissionResponse getById(int id) {
 
         Transmission transmission = transmissionRepository.findById(id).orElseThrow(() -> new IllegalArgumentException("Transmission not found"));
-        return new GetTranmissionResponse(transmission.getId(),transmission.getName());
+        return new GetTranmissionResponse(transmission.getId(), transmission.getName());
     }
 
-    @Override
-    public Transmission getByTransmissionId(int id) {
-
-        Transmission transmission = transmissionRepository.findById(id).orElseThrow(() -> new IllegalArgumentException("Transmission not found"));
-        return transmission;
-    }
 
     @Override
     public void delete(int id) {
+        Transmission transmission = findById(id);
         transmissionRepository.deleteById(id);
+    }
+
+    private Transmission findById(int id) {
+        return transmissionRepository.findById(id).orElseThrow(() -> new IllegalArgumentException("Brand not found"));
     }
 }
